feat: added passenger
